# roprop

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  conftest.py  main.py  models.py  pyproject.toml  test_main.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  cleanup-branch.yml
.zed/: settings.json
app/: auth.py  cache.py  config.py  database.py  redis_client.py  slack.py  utils.py
app/api/: auth.py  blog_likes.py  chat.py  departments.py  employees.py  meeting_rooms.py  pcs.py  reservations.py  search.py  tags.py
app/web/: auth.py  blogs.py  chat.py  dashboard.py  departments.py  employees.py  meeting_rooms.py  pcs.py  reservations.py  search.py  tags.py
doc/: guide.md  py-update.md
init_data/pg/: 01_create_tables.sql  02_insert_departments.sql  (+9 more)
seeder/: departments.py  employees.py  pcs.py
templates/: assignment_history.html  base.html  blog_detail.html  blog_edit.html  blog_list.html  blog_my.html  blog_register.html  blog_tag_list.html  chat.html  dashboard.html  department_edit.html  department_list.html  department_register.html  employee_detail.html  employee_edit.html  employee_list.html  employee_register.html  login.html  meeting_room_edit.html  meeting_room_list.html  meeting_room_register.html  mypage.html  pc_detail.html  pc_edit.html  pc_history.html  pc_list.html  pc_register.html  reservation_edit.html  reservation_list.html  reservation_register.html  search.html  tag_edit.html  tag_list.html  tag_register.html  verify_otp.html
tests/: conftest.py  test_auth.py  test_pcs.py
