[project]
name = "roprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.1",
    "litestar-granian>=0.14.2",
    "litestar[standard]>=2.18.0",
    "piccolo[postgres]>=1.28.0",
    "pillow>=11.3.0",
    "redis[hiredis]>=6.4.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
